WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19251
[Qt] setTextSizeMultiplier does not scale button fonts
https://bugs.webkit.org/show_bug.cgi?id=19251
Summary
[Qt] setTextSizeMultiplier does not scale button fonts
Siraj razick
Reported
2008-05-26 01:53:22 PDT
setTextSizeMultiplier does not scale the font size of buttons text. This is inconsistent with the way it happens in gtk webkit. I'll be attaching a fix shortly.
Attachments
setTextSizeMultiplier now scales button fonts
(1.54 KB, patch)
2008-05-27 01:54 PDT
,
Siraj razick
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tor Arne Vestbø
Comment 1
2008-05-26 03:58:42 PDT
Please note that on Mac we do want a fixed size button font. See RenderThemeQt::adjustButtonStyle().
Siraj razick
Comment 2
2008-05-27 01:54:08 PDT
Created
attachment 21359
[details]
setTextSizeMultiplier now scales button fonts With this patch, setTextSizeMultiplier will scale the button fonts. It reproduces GtkWebKit behavior implemented by Barisione (
http://people.collabora.co.uk/~bari/zoom.png
): except on Mac, where the Safari behavior is reproduced.
Tor Arne Vestbø
Comment 3
2008-06-02 02:52:17 PDT
Tested on Mac and X11, looks good. Thanks for the patch, Simon will commit it later today.
http://code.staikos.net/cgi-bin/gitweb.cgi?p=webkit;a=commitdiff;h=a9e4748a35a9f4d4c5196ddb9adbf2666520b20d
Simon Hausmann
Comment 4
2008-06-02 03:09:23 PDT
Landed in
r34296
Siraj razick
Comment 5
2008-06-02 05:58:03 PDT
(In reply to
comment #3
)
> Tested on Mac and X11, looks good. Thanks for the patch, Simon will commit it > later today. > >
http://code.staikos.net/cgi-bin/gitweb.cgi?p=webkit;a=commitdiff;h=a9e4748a35a9f4d4c5196ddb9adbf2666520b20d
>
(In reply to
comment #3
)
> Tested on Mac and X11, looks good. Thanks for the patch, Simon will commit it > later today. > >
http://code.staikos.net/cgi-bin/gitweb.cgi?p=webkit;a=commitdiff;h=a9e4748a35a9f4d4c5196ddb9adbf2666520b20d
>
Thank you!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug