2008-06-02  Siraj Razick  <siraj.razick@collabora.co.uk>

Reviewed by Simon

        Allow button fonts to scale based on the text size multiplier.

        https://bugs.webkit.org/show_bug.cgi?id=19251


Canonical link: https://commits.webkit.org/26750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34296 268f45cc-cd09-0410-ab3c-d52691b4dbfc